--- a/08-HTML/homework/cv.css
+++ b/08-HTML/homework/cv.css
@@ -8,7 +8,7 @@ body{
 }
 h2{
     text-transform: uppercase;
-    letter-spacing: 5px;
+    letter-spacing: .5em;
     border-bottom: 2px solid #8EBBA7;
     font-size: 1.5em;
 }
@@ -136,9 +136,8 @@ footer section h2{
 footer p{
     font-family: sans-serif;
     font-size: 18px;
-    font-style: oblique;
     font-weight: lighter;
-    font-weight: lighter;
+    line-height: 1.8em;
 }
 
 /*Que satisfactorio fue terminar este curriculum después del tiempazo que me llevó.
